# salma

./: .clang-tidy  .clangd  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  build.bat  deploy.bat  doxide.yml  mkdocs.yml  purge.bat  sonar-project.properties  test.bat  test.py  test_all.py  test_one.py  vcpkg.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  technical_task.yml
.github/workflows/: build.yml  sonar.yml  test.yml
overrides/: main.html
scripts/: _clean_docs.py  _promote_subgroups.py  common.py  compare.py  install.py  mo2-salma.py  scan.py  setup-env.bat
src/: ArchiveService.cpp  ArchiveService.h  ArchiveService.hpp  BackgroundJob.h  BackgroundJob.hpp  CApi.cpp  CApi.h  CApi.hpp  ConfigService.cpp  ConfigService.h  Export.h  FileOperations.cpp  FileOperations.h  FileOperations.hpp  FomodArchiveResolver.cpp  FomodArchiveResolver.h  FomodArchiveResolver.hpp  FomodAtom.h  FomodAtom.hpp  FomodCSPOptions.cpp  FomodCSPOptions.h  FomodCSPOptions.hpp  FomodCSPPrecompute.cpp  FomodCSPPrecompute.h  FomodCSPPrecompute.hpp  FomodCSPSolver.cpp  FomodCSPSolver.h  FomodCSPSolver.hpp  FomodCSPSolverInternal.h  FomodCSPSolverInternal.hpp  FomodCSPSolverPhases.cpp  FomodCSPTypes.h  FomodCSPTypes.hpp  FomodDependencyEvaluator.cpp  FomodDependencyEvaluator.h  FomodDependencyEvaluator.hpp  FomodForwardSimulator.cpp  FomodForwardSimulator.h  FomodForwardSimulator.hpp  FomodIR.h  (+57 more)
tests/: fomod_inference_test.cpp  inference_diagnostics_test.cpp  security_context_test.cpp  utils_test.cpp
web/: .env.example  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  FomodBrowserPage.tsx  FomodDetailPage.tsx  InstallPage.tsx  LogsPage.tsx  SettingsPage.tsx  ThemeContext.tsx  api.ts  index.css  main.tsx  progressBarParsing.tsx  readinessStyles.ts  types.ts  useInstallation.ts  usePluginAction.ts  useScanJob.ts  useSystemStatus.ts  useTestRunner.ts  useViewportShort.ts  useVirtualScroll.ts
web/src/components/: ActionButtonGroup.tsx  ConfidenceBreakdown.tsx  ConfidencePill.tsx  ErrorBoundary.tsx  FileUpload.tsx  FomodListItem.tsx  FomodStepCard.tsx  InstallationQueue.tsx  InstallationQueueShell.tsx  Layout.tsx  LogLine.tsx  ProgressBar.tsx  Section.tsx  StatusCard.tsx  SystemStatusSection.tsx  WhyPanel.tsx
web/src/hooks/: useCollapsedQueue.ts  usePolling.ts  useTestRunner.ts  useVirtualScroll.ts
web/src/pages/: FomodBrowserPage.tsx  FomodDetailPage.tsx  InstallPage.tsx  LogsPage.tsx  SettingsPage.tsx
web/src/utils/: logHighlight.ts  readinessStyles.ts
